--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -85,7 +85,14 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-
+<div class="lh-copy">
+          Heroku started marking free databases for deletion,
+          converting your free dynos to Eco, and scaling them to 0. To restore app
+          functionality, subscribe to Eco or upgrade to another paid tier.
+          To recover your data,
+          <a href="https://help.heroku.com" class="hk-link" target="blank" rel="noopener noreferrer">contact Heroku Support</a>
+          as soon as possible.
+      </div>
     <div class="container">
         {% block content %}
         {% endblock %}
