--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -85,7 +85,21 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<div class="lh-copy">
+<div class="flex justify-between items-center hk-message--danger mt4 w-100 limit-width">
+  <div class="flex items-center mr6">
+    <div class="mr2">
+        <svg style="height: 28px; width: 28px;" id="malibu-icon-svg-ember687" class="icon malibu-icon " data-test-icon-name="warning-badge-28" data-test-target="malibu-icon" aria-hidden="true" role="img">
+<!---->  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#warning-badge-28"></use>
+</svg>
+
+    </div>
+    <div class="flex-auto">
+      <div class="f4 b lh-tittle">
+          Free Heroku Postgres, free Heroku Data for
+          Redis®, and free Heroku Dynos are no
+          longer available.
+      </div>
+      <div class="lh-copy">
           Heroku started marking free databases for deletion,
           converting your free dynos to Eco, and scaling them to 0. To restore app
           functionality, subscribe to Eco or upgrade to another paid tier.
@@ -93,6 +107,13 @@
           <a href="https://help.heroku.com" class="hk-link" target="blank" rel="noopener noreferrer">contact Heroku Support</a>
           as soon as possible.
       </div>
+    </div>
+  </div>
+  <div>
+    <button id="ember688" class="async-button default hk-button--danger ember-view" role="link" type="submit">    Choose Apps to Upgrade
+</button>
+  </div>
+</div>
     <div class="container">
         {% block content %}
         {% endblock %}
