--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/vendor-8ede1d945f763edd520846ef57bd5833.css">
+  <link rel="stylesheet" href="/assets/dashboard-bd169a67f7bcf5931feb66bbb70ed686.css">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
